# mayyam

./: .dockerignore  .env.distributable  .env.distributable.example  .env.example  .gitignore  AUDIT_METRICS_IMPLEMENTATION.md  AWS_CREDENTIALS_SECURITY.md  Dockerfile  Dockerfile.base  Dockerfile.test  FRONTEND_AUDIT_METRICS_GUIDE.md  KINESIS_ANALYSIS_GUIDE.md  LICENSE  Makefile  README.md  REAL_AWS_TESTING.md  add_sample_kinesis_streams.sh  config.distributable.yml  dev-run.sh  docker-compose.dev.yml  docker-compose.distributable.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  generate_csv_test_data.py  generate_jwt.js  generate_test_kafka_data.py  manage_aws_credentials.sh  package-lock.json  package.json  pom.xml  run-integration-tests.sh  run-local-tests.sh  run.sh  run_it.sh  run_real_aws_tests.sh  run_secure_aws_tests.sh  test_data_file1.csv  test_data_file2.csv  (+3 more)
backend/: .dockerignore  API_DOCUMENTATION.md  API_KUBERNETES.md  Cargo.toml  DOCKER_OPTIMIZATION.md  Dockerfile  Dockerfile.dev  Dockerfile.fast  Dockerfile.final  Dockerfile.minimal  Dockerfile.simple  Dockerfile.test  Dockerfile.working  cargo_out.txt  config.default.yml  config.test.yml  config.yml  debug-docker.sh  dev_local_run.sh  docker-build.sh  run_tests.sh  setup-user-fixed.sql  test-builds.sh
backend/.cargo/: config.toml  rustc-wrapper.sh
backend/.config/: nextest.toml
backend/migrations/: 001_initial_schema.sql  002_aws_accounts_table.sql  003_aws_resources_table.sql  005_sync_runs_table.sql  006_aws_cost_analytics.sql  007_query_templates_table.sql  008_query_templates_make_connection_type_optional.sql  010_llm_analytics_platform.sql  013_insert_test_resources.sql  015_mysql_triaging_prompts.sql  016_add_missing_aws_account_columns.sql  017_postgres_triaging_prompts.sql  018_chaos_engineering.sql  019_chaos_audit_and_metrics.sql  add_base_url_to_llm_providers.sql  add_llm_provider_models.sql  add_missing_llm_provider_columns.sql  add_sync_id_to_aws_resources.sql  aws_resources_table.sql  initial_schema.sql  mysql_triaging_prompts.sql  query_templates_make_connection_type_optional.sql  query_templates_table.sql
backend/src/: errors.rs  lib.rs  main.rs  main_simple.rs
backend/src/api/: mod.rs  server.rs
backend/src/api/routes/: ai.rs  auth.rs  aws_account.rs  aws_analytics.rs  budget.rs  chaos.rs  cloud.rs  cost_analytics.rs  data_source.rs  database.rs  explain_plan.rs  graphql.rs  kafka.rs  kubernetes.rs  (+11 more)
backend/src/cli/: chaos.rs  cloud.rs  database.rs  kafka.rs  kubernetes.rs  mod.rs
backend/src/config/: mod.rs
backend/src/controllers/: ai.rs  ai_analysis.rs  aurora_cluster.rs  auth.rs  authz.rs  aws_account.rs  aws_analytics.rs  budget.rs  chaos.rs  cloud.rs  cluster_management.rs  configmaps.rs  cost_analytics.rs  crds.rs  cronjobs.rs  data_source.rs  database.rs  endpoints.rs  explain_plan.rs  hpa.rs  ingress.rs  jobs.rs  kafka.rs  kubernetes.rs  kubernetes_cluster_management.rs  limit_ranges.rs  llm_analytics.rs  llm_model.rs  llm_provider.rs  mod.rs  mysql_performance.rs  network_policies.rs  node_ops.rs  pdb.rs  prompt_template.rs  query_fingerprint.rs  query_template.rs  rbac.rs  replica_sets.rs  resource_analytics.rs  (+8 more)
backend/src/errors/: mod.rs
backend/src/integrations/: mod.rs  notifications.rs
backend/src/middleware/: auth.rs  mod.rs
backend/src/models/: ai_analysis.rs  analytics.rs  aurora_cluster.rs  aws_account.rs  aws_auth.rs  aws_cost_anomalies.rs  aws_cost_data.rs  aws_cost_insights.rs  aws_monthly_cost_aggregates.rs  aws_resource.rs  chaos_audit_log.rs  chaos_experiment.rs  chaos_experiment_result.rs  chaos_experiment_run.rs  chaos_metrics.rs  chaos_metrics_aggregates.rs  chaos_template.rs  cloud_resource.rs  cluster.rs  cost_budget.rs  data_source.rs  database.rs  explain_plan.rs  llm_model.rs  llm_provider.rs  mod.rs  mysql_performance_snapshot.rs  prompt_template.rs  query_fingerprint.rs  query_template.rs  resource_workflows.rs  slow_query_event.rs  sync_run.rs  user.rs
backend/src/repositories/: ai_analysis_repository.rs  aurora_cluster_repository.rs  aws_account.rs  aws_resource.rs  chaos_audit_repository.rs  chaos_metrics_repository.rs  chaos_repository.rs  cloud_resource.rs  cluster.rs  cost_analytics.rs  cost_budget_repository.rs  data_source.rs  database.rs  explain_plan_repository.rs  llm_model.rs  llm_provider.rs  mod.rs  mysql_performance_repository.rs  prompt_template.rs  prompt_template_new.rs  query_fingerprint_repository.rs  query_template.rs  slow_query_repository.rs  sync_run.rs  user.rs
backend/src/services/: ai_analysis_service.rs  aws.rs  aws.rs.bak  aws_account.rs  aws_analytics.rs  aws_cost_analytics.rs  aws_dataplane.rs  budget_service.rs  chaos_audit_service.rs  chaos_metrics_service.rs  chaos_service.rs  cloudwatch_scraper.rs  cost_categories.rs  data_collection.rs  database.rs  explain_plan_service.rs  kafka.rs  llm_analytics.rs  llm_integration.rs  llm_provider.rs  metric_streams_parser.rs  mod.rs  mysql_performance_service.rs  query_fingerprinting_service.rs  resource_cost_enrichment.rs  slow_query_ingestion_service.rs  slow_query_poller.rs  user.rs
backend/src/tests/: ai_chat_stream.rs  aws_account_test.rs  backup_integration_tests.rs  kafka_tests.rs  kinesis_api_tests.rs  kinesis_unit_tests.rs  mod.rs  test_utils.rs
backend/src/utils/: database.rs  database_ext.rs  encryption.rs  html_generator.rs  logging.rs  migrations.rs  mod.rs  retry.rs  time_conversion.rs
backend/test-results/: junit.xml
backend/test_data/: init-db.sh  seed.sql
backend/tests/: README.md  integration.rs  integration_api.rs  integration_tests.rs  test_utils.rs  unit_tests.rs
backend/tests/common/: mod.rs  test_utils.rs
backend/tests/integration/: ai_chat_stream_test.rs  api_integration_test.rs  api_tests.rs  aws_account_api_tests.rs  aws_control_plane_api_tests.rs  cost_analytics_api_tests.rs  ec2_api_tests.rs  iam_api_tests.rs  kinesis_api_tests.rs  kubernetes_smoke_tests.rs  llm_integration_tests.rs  misc_api_tests.rs  mod.rs  rules.md
backend/tests/unit/: database_api_tests.rs  mod.rs
(+511 files in other folders)
