[package]
name = "mayyam"
version = "0.1.0"
edition = "2021"
description = "A comprehensive toolbox for DevOps and SRE engineers"
authors = ["Rajan Panneer Selvam"]
license = "MIT"

[[bin]]
name = "mayyam-simple"
path = "src/main_simple.rs"

[[bin]]
name = "simple"
path = "src/bin/simple.rs"

[dependencies]
# Web framework
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.6"

# CLI support
clap = { version = "4.4", features = ["derive"] }

# Logger
env_logger = "0.10"

# Database ORM
sea-orm = { version = "0.12", features = ["sqlx-postgres", "sqlx-mysql", "runtime-tokio-rustls", "macros"] }
sea-query = "0.30"
redis = { version = "0.23", features = ["tokio-comp"] }
opensearch = "2.2"

# GraphQL
async-graphql = "5.0"
async-graphql-actix-web = "5.0"

# Serialization & Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Authentication
jsonwebtoken = "8.3"
bcrypt = "0.15"
oauth2 = "4.4"
samael = "0.0.12"  # SAML2 authentication support

# Kafka
rdkafka = { version = "0.34", features = ["dynamic-linking"] }

# AWS SDK
aws-config = "0.55"
aws-sdk-ec2 = "0.28"
aws-sdk-s3 = "0.28"
aws-sdk-cloudwatch = "0.28"
aws-sdk-elasticache = "0.28"
aws-types = "0.55"

# Azure SDK
azure_core = "0.14"
azure_identity = "0.14"
azure_mgmt_compute = "0.14"
azure_mgmt_storage = "0.14"

# Kubernetes
kube = { version = "0.85", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.19.0", features = ["v1_27"] }

# Configuration
config = "0.13"
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Async runtime
tokio = { version = "1.29", features = ["full"] }
futures = "0.3"
futures-util = "0.3"  # Added to support auth middleware

# AI integration
reqwest = { version = "0.11", features = ["json"] }
async-openai = "0.14"

# Utility
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
rand = "0.8"
async-trait = "0.1"

[dev-dependencies]
mockall = "0.11"
tokio-test = "0.4"
