[package]
name = "mayyam"
version = "0.1.0"
edition = "2021"
description = "A comprehensive toolbox for DevOps and SRE engineers"
authors = ["Rajan Panneer Selvam"]
license = "MIT"
default-run = "mayyam"

[dependencies]
# Web framework
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.6"

# CLI support
clap = { version = "4.4", features = ["derive"] }

# Logger
env_logger = "0.10"

# Database ORM
sea-orm = { version = "0.12", features = ["sqlx-postgres", "sqlx-mysql", "sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "0.12"
sea-query = "0.30"
sqlx = { version = "=0.7.0", features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite", "json", "chrono", "uuid"] }
redis = { version = "0.23", features = ["tokio-comp"] }
opensearch = "2.2"

# GraphQL
async-graphql = "5.0"
async-graphql-actix-web = "5.0"

# Serialization & Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bigdecimal = "0.4"
csv = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Authentication
jsonwebtoken = "8.3"
bcrypt = "0.15"
oauth2 = "4.4"
samael = "0.0.12"  # SAML2 authentication support

# Kafka
rdkafka = { version = "0.34", features = ["dynamic-linking"] }

# Compression and filesystem operations
flate2 = "1.0"  # Gzip compression
snap = "1.1"    # Snappy compression
lz4 = "1.24"    # LZ4 compression
crc32fast = "1.3"  # CRC32 checksum for data integrity
walkdir = "2.4"    # Directory traversal for backup management
tempfile = "3.8"   # Temporary file creation for safe operations

# AWS SDKX
aws-config = "1.8.6"
aws-sdk-ec2 = "1.166.0"
aws-smithy-http = "0.62.3"  # Added for AWS SDK core types
aws-smithy-types = "1.3.2"  # Added for AWS SDK date time formatting
aws-sdk-s3 = "1.105.0"
aws-sdk-rds = "1.107.0"
aws-sdk-dynamodb = "1.92.0"
aws-sdk-kinesis = "1.88.0"
aws-sdk-sqs = "1.83.0"
aws-sdk-sns = "1.84.0"
aws-sdk-lambda = "1.96.0"
aws-sdk-cloudwatch = "1.90.0"
aws-sdk-cloudwatchlogs = "1.101.0"
aws-sdk-elasticache = "1.89.0"
aws-sdk-opensearch = "1.97.0"
aws-sdk-costexplorer = "1.92.0"
aws-sdk-sts = "1.85.0"
aws-sdk-apigateway = "1.92.0"
aws-sdk-cloudfront = "1.102.0"
aws-sdk-elasticloadbalancing = "1.90.0"
aws-sdk-elasticloadbalancingv2 = "1.99.0"
aws-sdk-efs = "1.92.0"
aws-types = "1.3.8"
aws-credential-types = "1.2.6"

# Kubernetes
kube = { version = "0.85", features = ["runtime", "derive", "ws"] }
k8s-openapi = { version = "0.19.0", features = ["v1_27"] }

# Configuration
config = "0.13"
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Async runtime
tokio = { version = "1.29", features = ["full"] }
futures = "0.3"
futures-util = "0.3"  # Added to support auth middleware

# AI integration
reqwest = { version = "0.11", features = ["json"] }
async-openai = "0.14"

# Parquet for data processing
parquet = { version = "50.0", default-features = false, features = ["arrow", "async", "brotli", "flate2", "lz4", "snap"] }
arrow = { version = "50.0", default-features = false, features = ["prettyprint"] }

# Scheduling utilities
cron = "0.12"

# Utility
chrono = { version = "=0.4.31", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
rand = "0.8"
async-trait = "0.1"
aes-gcm = "0.10.1"
base64 = "0.21"
once_cell = "1.19"
dashmap = "5.5"
sha2 = "0.10"
shlex = "1.3"
secrecy = "0.8"
regex = "1.10"
md5 = "0.7"
aws-smithy-runtime-api = "1.9.0"
bytes = "1.0"  # Added bytes crate dependency for Parquet reader

[dev-dependencies]
mockall = "0.11"
tokio-test = "0.4"
reqwest = { version = "0.11", features = ["json"] }
# Additional testing dependencies
rstest = "0.18"
proptest = "1.0"
fake = "2.5"
tempfile = "3.5"
serial_test = "2.0"
wiremock = "0.5"
assert_matches = "1.5"

testcontainers = "0.15"
testcontainers-modules = { version = "0.1", features = ["kafka", "zookeeper"] }
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []
integration-tests = []
performance-tests = []
